# openweather-cli

./: .env.example  README.md  pyproject.toml  requirements.txt
tests/: test_cli.py  test_client.py
weather_cli/: client.py  config.py  formatters.py  main.py
